# urcollectionmanager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.rst  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
data/: collection.sqlite  test_collection.sqlite
tests/: conftest.py  test_api.py  test_auth.py  test_history.py  test_http.py  test_missions.py  test_purchase.py  test_urcollectionmanager.py
tests/resources/: history.txt  missions.txt  resource_maker.py  session.txt  single_missions.txt
urcollectionmanager/: api.py  auth.py  database.py  history.py  http.py  mission.py  missions.py  purchase.py
