[tool.poetry]
name = "urcollectionmanager"
version = "0.1.0"
description = "API for Urban Rivals collection management"
authors = ["Brent Spector <brent.spector@yahoo.com>"]
license = MIT
readme = README.rst

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
